--- a/crud_app.html
+++ b/crud_app.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.tailwindcss.com"></script>
     <title>Document</title>
 </head>
 <body>
-    Hello
+    <div class=" grid gap-x-7  grid-cols-3 h-screen">
+        <div class="border-solid border-2 border-amber-600 drop-shadow-md bg-gradient-to-r from-indigo-200 via-purple-200 to-pink-200 ">
+            
+        </div>
+        <div class="bg-gray-300 col-span-2"></div>
+    </div>
 </body>
 </html>
