--- a/crud_app.html
+++ b/crud_app.html
@@ -70,7 +70,7 @@
                         <tr>
                             <td></td>
                             <td>
-                                <button class="p-2 m-2 bg-gray-300 border-solid border-2 border-indigo-600 rounded-lg" type="submit" onclick="submitFormValues()" form="nameform" value="Submit">Submit</button>
+                                <button class="p-2 m-2 bg-gray-300 border-solid border-2 border-indigo-600 rounded-lg" type="submit" id="submit-button"  onclick="submitFormValues()" form="nameform" value="Submit">Submit</button>
                                 &nbsp;<button class="p-2 m-2 bg-gray-300 border-solid border-2 border-indigo-600 rounded-lg" type="reset" onclick="resetFormValues()" form="nameform" value="reset">Reset</button>
                             </td>
                         </tr>
@@ -116,9 +116,15 @@
                 };
                 if(isEdit===true){
                     console.log(indexOfEdit);
-                    indexOfEdit
+                    users[indexOfEdit]=userObj;
+                    indexOfEdit=-1;
+                    isEdit=false;
+                    let b=document.getElementById('submit-button');
+                    b.innerText='Submit';
                 }
-              else{users.push(userObj);}
+              else{
+             
+                users.push(userObj);}
                 
                 document.getElementById('name').value = '';
                 document.getElementById('email').value = '';
@@ -182,6 +188,8 @@
                         document.getElementById('gender').value= users[indexxx].gender;
                         isEdit=true;
                         indexOfEdit=indexxx;
+                        const myButton = document.getElementById('submit-button');
+                        myButton.innerText = 'Update';
                     })
                     button.append(editbutton);
                     button.setAttribute("class", "p-2 bg-fuchsia-600 rounded-lg");
@@ -208,7 +216,12 @@
             }
             function resetFormValues() {
                 console.log("reset call");
-                document.getElementById('name').value = '';
+                const myButton = document.getElementById('submit-button');
+                myButton.innerText = 'Submit';
+                isEdit = false;
+                indexOfEdit = -1;
+
+                 document.getElementById('name').value = '';
                 document.getElementById('email').value = '';
                 document.getElementById('mob').value = '';
                 document.getElementById('state').value = '';
